# handbook

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  justfile  pyproject.toml
src/: config.py  main.py
src/api/: api_key.py  dtos.py
src/api/controllers/: __init__.py  organization.py
src/features/organization/: exceptions.py
src/features/organization/application/: dtos.py  mapper.py
src/features/organization/application/interactors/: __init__.py  get_organization_by_id.py  get_organization_by_title.py  get_organizations.py
src/features/organization/domain/: repository.py  value_objects.py
src/features/organization/domain/entities/: activity.py  organization.py
src/infrastructure/: mapper.py  repository.py
src/infrastructure/migrations/versions/: 2025_06_22_1100-d2ae914e2ab4_.py  2025_06_22_1113-2bc0514ee4a8_.py  2025_06_22_1115-479b7a1810bd_.py  2025_06_23_0854-5168e085b862_.py  2025_06_23_1301-ccca048116a0_.py
src/infrastructure/models/: __init__.py  activity.py  building.py  organization.py
src/providers/: adapters.py  interactor_providers.py
src/utils/: seed_data.py
src/utils/log/: setup.py
